# Embedding-model-fine-tuning

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Embedding_model_fine_tuning_test.ipynb  Makefile  README.md  SETUP.md  VERIFICATION_REPORT.md  docker-compose.yml  pyproject.toml  quick_start.sh  requirements.txt  verify_setup.py
.devcontainer/: devcontainer.json
data/: 20251205_시사경제용어사전.xlsx  README.md  기획재정부_경제용어_20240905.csv  한국은행_경제금융용어700선_정리.xlsx
src/: api.py  main.py  main_LoRA.py
src/embedding_finetune/: __init__.py  train.py  utils.py
tests/: __init__.py  test_train.py  test_utils.py
